# mycelium

./: .gitignore  CeliumLauncher.ps1  CeliumLauncher.vbs  README.md  build_msi.ps1  index.html  package-lock.json  package.json  push.bat  push.ps1  warnings.txt  warnings_fixed.txt  warnings_utf8.txt
backend/: Cargo.toml  make_msi.ps1  tauri.conf.json
backend/capabilities/: default.json
backend/resources/: Caddyfile
backend/resources/lib/: libecpg_compat.lib  libpgtypes.lib  libpq.lib  pgevent.lib  postgres.lib  wxbase32u_xml.lib  wxmsw32u_adv.lib  wxmsw32u_aui.lib  wxmsw32u_html.lib  wxmsw32u_xrc.lib
backend/resources/lib/pkgconfig/: libecpg.pc  libecpg_compat.pc  libpgtypes.pc  libpq.pc
backend/src/: bridge.rs  business_logic_tests.rs  db.rs  embedded_db.rs  error.rs  integration_tests.rs  lib.rs_part  main.rs  proxy.rs  state.rs  stubs.rs  stubs_macros.rs
backend/src/bridge/: auth.rs  crm.rs  customer.rs  dashboard.rs  event.rs  mod.rs  product.rs  production.rs  sales.rs
backend/src/commands/: ai.rs  analysis.rs  config.rs  consultation.rs  courier.rs  crm.rs  customer.rs  dashboard.rs  event.rs  experience.rs  finance.rs  iot.rs  ledger.rs  logistics.rs  mod.rs  preset.rs  product.rs  schedule.rs  system.rs  utility.rs
backend/src/commands/backup/: auto.rs  logic.rs  maintenance.rs  mod.rs  models.rs  status.rs  web.rs
backend/src/commands/finance/: mod.rs  pdf.rs
backend/src/commands/production/: batch.rs  harvest.rs  log.rs  media.rs  mod.rs  pdf.rs  space.rs
backend/src/middleware/: auth.rs  response.rs
backend/src/routes/: ai.rs  auth.rs  backup.rs  config.rs  customer.rs  dashboard.rs  event.rs  experience.rs  finance.rs  iot.rs  ledger.rs  mod.rs  preset.rs  product.rs  production.rs  sales.rs  schedule.rs  system.rs  utility.rs
backend/wix/: main.wxs  resources.wxs
src-tauri/: Cargo.toml  append_stubs.py  cargo_out.json  check_handler_dupes.cjs  check_missing.cjs  check_missing_deep.cjs  check_output.txt  cleanup.cjs  cleanup_lib_stubs.cjs  cleanup_stubs.cjs  cleanup_v2.cjs  debug_lines.cjs  errors.txt  find_dupes.cjs  find_dupes_v2.cjs  find_lines.cjs  find_lines.py  find_ranges.cjs  gen_stubs.cjs  gen_stubs_final.cjs  gen_stubs_v3.cjs  identify_ranges.cjs  mass_cleanup.cjs  plan_removal.py  remove_lines.cjs  remove_lines.py  reset_stubs_clean.cjs  search.cjs  tauri.conf.json
src-tauri/migrations/: 20260202173000_init_full_schema.sql  20260203120000_create_product_bom.sql  20260204191000_production_management.sql  20260204231600_add_product_category.sql  20260208210000_add_dashboard_indexes.sql  20260209200000_optimize_dashboard_queries.sql  20260210123500_add_custom_presets.sql  20260211110000_roadmap_enhancements.sql  20260211150000_iot_enhancements.sql
src-tauri/resources/lib/: libecpg.lib  postgres.lib  wxbase32u.lib  wxbase32u_net.lib
src-tauri/src/: bridge.rs  db.rs  embedded_db.rs  lib.rs  schema.sql
src-tauri/src/commands/: ai.rs  analysis.rs  backup.rs  config.rs  consultation.rs  courier.rs  crm.rs  customer.rs  dashboard.rs  event.rs  experience.rs  finance.rs  ledger.rs  logistics.rs  mod.rs  preset.rs  product.rs  production.rs  sales.rs  schedule.rs  utility.rs
src-tauri/temp_target/: .rustc_info.json
(+1385 files in other folders)
