[package]
name = "celium-backend"
version = "1.0.0"
authors = ["yeonmo"]
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
rust-embed = "8.6.0"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mime_guess = "2.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "migrate", "rust_decimal", "json", "uuid"] }
rust_decimal = { version = "1", features = ["serde-float"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
thiserror = "2.0"
bcrypt = "0.17.1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.12.2"
polars = { version = "0.41.0", features = ["lazy", "sql", "temporal"] }
rand = "0.9.2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
urlencoding = "2"
base64 = "0.22"
qrcode-generator = "5.0.0"
flate2 = "1.0"
futures-util = "0.3.31"
open = "5.3.3"
printpdf = { version = "0.7", features = ["embedded_images"] }
genpdf = { version = "0.2", features = ["images"] }
image = "0.24"
aes-gcm = "0.10.3"
aead = "0.5.2"
local-ip-address = "0.6.10"
sha2 = "0.10.9"
dirs = "6.0.0"
