[package]
name = "mycelium"
version = "1.0.0"
description = "A Tauri App"
authors = ["yeonmo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mycelium_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "migrate", "rust_decimal"] }
rust_decimal = { version = "1", features = ["serde-float"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
webview2-com = "0.38.0"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_System_Com", "Win32_UI_WindowsAndMessaging"] }
thiserror = "2.0"
bcrypt = "0.17.1"
dotenvy = "0.15"
log = "0.4.29"
regex = "1.12.2"
polars = { version = "0.41.0", features = ["lazy", "sql", "temporal"] }
rand = "0.9.2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
urlencoding = "2"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-app = "2.0.0-alpha.2"
base64 = "0.22"
qrcode-generator = "5.0.0"
flate2 = "1.0"
futures-util = "0.3.31"
open = "5.3.3"
